--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,7 @@ const posts = (await getCollection('blog'))
                     </strong>
                 </p>
                 <div id="contact">
-                    <a class="icon-link" href="https://github.com/koibumi-design" target="_blank" aria-label="GitHub">
+                    <a class="icon-link" href="hhttps://github.com/flhcx" target="_blank" aria-label="GitHub">
                         <SiGithub size={32} />
                     </a>
                 </div>
