--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ const posts = (await getCollection('blog'))
             <div>
                 <p>
                     <strong>
-                        Contact me:
+                        联系我:
                     </strong>
                 </p>
                 <div id="contact">
