--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,6 +15,7 @@ const today = new Date();
 >
         &copy; {today.getFullYear()}&nbsp;{COPYRIGHT_NAME}. All rights reserved.<br>
         Powered by <a class="link" href="https://github.com/koibumi-design/astro-blog">Koibumi Design</a>
+        <a href=" " target="_blank">萌ICP备20251120号</a>
 </footer>
 
 <style>
