--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,7 +48,7 @@ const posts = (await getCollection('blog'))
 
     <Card variant={GLOBAL_STYLE}>
         <h3>
-            Pinned Posts
+            一些文章~
         </h3>
     </Card>
     <section id="pinned-container">
